Fixed github link, added custom scrollbar for chrome, and added custom cursor

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@
   margin: 0;
   font-family: 'Roboto', sans-serif;
   text-size-adjust: none;
+  cursor: none;
 }
 
 html,
@@ -20,6 +21,18 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #282828;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ededed;
 }
 
 .container {
